force-app/main/default/objects/Account/fields/NumberOfUnpaidServices__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnpaidServices__c</fullName>
    <description>Count of Client Request services with an outstanding balance for this Agency. Updated via scheduled Flow.</description>
    <label>Number of Unpaid Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>