force-app/main/default/objects/Account/fields/OldestUnpaidServiceDate__c.field-meta.xml
<CustomField>
    <fullName>OldestUnpaidServiceDate__c</fullName>
    <description>Date of the oldest unpaid Client Request service for this Agency. Updated via scheduled Flow.</description>
    <label>Oldest Unpaid Service Date</label>
    <type>Date</type>
</CustomField>