force-app/main/default/objects/Account/fields/TotalOutstandingBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstandingBalance__c</fullName>
    <description>Total outstanding balance from all unpaid Client Request services for this Agency. Updated via scheduled Flow.</description>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>